# python-connector

./: .env.example  pyproject.toml  session_options.py
examples/: add_password.py  delete_password.py  get_inbox_password.py  get_password.py  search_password.py
passwork_python_client/: __init__.py  passwork_api.py
passwork_python_client/rest_modules/: passwords.py  users.py  vaults.py
passwork_python_client/utils/: http_client.py  messages.py
rest_modules/: passwords.py  users.py
utils/: http_client.py
